package view;

public interface IPantallaBase {
    void onShow();
}
